<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/pizza"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            android:weightSum="1"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight=".5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/size" />

                <RadioGroup
                    android:id="@+id/rbgSize"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp">

                    <RadioButton
                        android:id="@+id/rbLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/large" />

                    <RadioButton
                        android:id="@+id/rbMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/medium" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight=".5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/crust" />

                <RadioGroup
                    android:id="@+id/rbgCrust"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp">

                    <RadioButton
                        android:id="@+id/rbThick"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/thick" />

                    <RadioButton
                        android:id="@+id/rbThin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/thin" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/topping" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight=".5"
                android:orientation="vertical"
                android:layout_marginStart="20dp">

                <CheckBox
                    android:id="@+id/cbCrayfish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/crayfish" />

<!--                <CheckBox-->
<!--                    android:id="@+id/cbLobster"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="Lobster" />-->

                <CheckBox
                    android:id="@+id/cbShrimps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shrimps" />

                <CheckBox
                    android:id="@+id/cbMozzarella"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mozzarella" />

                <CheckBox
                    android:id="@+id/cbTurkey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/turkey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight=".5"
                android:orientation="vertical"
                android:layout_marginStart="20dp">

                <CheckBox

                    android:id="@+id/cbHam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ham"
                    tools:ignore="InvalidId" />

                <CheckBox
                    android:id="@+id/cbMeatballs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/meatballs" />

                <CheckBox
                    android:id="@+id/cbBBQChick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bbq_chicken" />

                <CheckBox
                    android:id="@+id/cbBacon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bacon" />

<!--                <CheckBox-->
<!--                    android:id="@+id/cbFungi"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="Fungi" />-->
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/beverage" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight=".5"
                android:orientation="vertical"
                android:layout_marginStart="20dp">

                <CheckBox
                    android:id="@+id/cbMargarita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/margarita"
                    tools:ignore="InvalidId" />

                <CheckBox
                    android:id="@+id/cbCerveza"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cerveza"
                    tools:ignore="InvalidId" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight=".5"
                android:orientation="vertical"
                android:layout_marginStart="20dp">

                <CheckBox
                    android:id="@+id/cbSoda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/soda"
                    tools:ignore="InvalidId" />

                <CheckBox
                    android:id="@+id/cbTequilla"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tequilla"
                    tools:ignore="InvalidId" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight=".5"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:text="@string/place_your_order" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight=".5"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/teal_700"
                    android:text="@string/our_address" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>